Reduce API calls for student stats